--- a/source/__scss/utilities/_effects.scss
+++ b/source/__scss/utilities/_effects.scss
@@ -5,19 +5,19 @@
 // BOX SHADOW
 .#{$element}box-shadow#{$modifier} {
 
-	@each $name, $amount in $amounts {
+    @each $name, $amount in $amounts {
 
-		&#{$name} {
+        &#{$name} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
 
-				@include shadow($type: 'box-shadow', $color: #000, $x: 0, $y: $amount, $blur: $amount, $spread: 0, $alpha: 0.2, $strength: 0, $inset: false);
+                @include shadow($type: 'box-shadow', $color: #000, $x: 0, $y: $amount, $blur: $amount, $spread: 0, $alpha: 0.2, $strength: 0, $inset: false);
 
-			}
+            }
 
-		}
+        }
 
-	}
+    }
 
 }
 
@@ -25,19 +25,19 @@
 // DROP SHADOW
 .#{$element}drop-shadow#{$modifier} {
 
-	@each $name, $amount in $amounts {
+    @each $name, $amount in $amounts {
 
-		&#{$name} {
+        &#{$name} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
 
-				@include shadow($type: 'drop-shadow', $color: #000, $x: 0, $y: $amount, $blur: $amount, $spread: 0, $alpha: 0.25, $strength: 0.5, $inset: false);
+                @include shadow($type: 'drop-shadow', $color: #000, $x: 0, $y: $amount, $blur: $amount, $spread: 0, $alpha: 0.25, $strength: 0.5, $inset: false);
 
-			}
+            }
 
-		}
+        }
 
-	}
+    }
 
 }
 
@@ -45,19 +45,19 @@
 // TEXT SHADOW
 .#{$element}text-shadow#{$modifier} {
 
-	@each $name, $amount in $amounts {
+    @each $name, $amount in $amounts {
 
-		&#{$name} {
+        &#{$name} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
 
-				@include shadow($type: 'text-shadow', $color: #000, $x: $amount, $y: $amount, $blur: 1px, $alpha: 0.25, $strength: 1);
+                @include shadow($type: 'text-shadow', $color: #000, $x: $amount, $y: $amount, $blur: 1px, $alpha: 0.25, $strength: 1);
 
-			}
+            }
 
-		}
+        }
 
-	}
+    }
 
 }
 
@@ -65,25 +65,25 @@
 // BLUR
 .#{$element}blur#{$modifier} {
 
-	@each $name, $amount in $amounts {
+    @each $name, $amount in $amounts {
 
-		&#{$name} {
+        &#{$name} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
-				filter: blur($amount / 2);
-			}
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+                filter: blur($amount / 2);
+            }
 
-		}
+        }
 
-		&#{'svg'} {
+        &#{'svg'} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
-				filter: url(#blur);
-			}
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+                filter: url(#blur);
+            }
 
-		}
+        }
 
-	}
+    }
 
 }
 
@@ -91,30 +91,38 @@
 // BACKDROP BLUR
 .#{$element}frost#{$modifier} {
 
-	@each $name, $amount in $amounts {
+    @each $name, $amount in $amounts {
 
-		&#{'white'}#{$modifier}#{$name} {
+        &#{'white'}#{$modifier}#{$name} {
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
 
-				background-color: rgba($white, 0.2);
-				backdrop-filter: blur($amount / 2);
+                @supports (( -webkit-backdrop-filter: $amount / 2 ) or ( backdrop-filter: $amount / 2 )) {
 
-			}
+                    background-color: rgba($white, 0.2);
+                    backdrop-filter: blur($amount / 2);
 
-		}
+                }
 
-		&#{'black'}#{$modifier}#{$name} {
+            }
 
-			@include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
+        }
 
-				background-color: rgba($black, 0.2);
-				backdrop-filter: blur($amount / 2);
-				
-			}
+        &#{'black'}#{$modifier}#{$name} {
 
-		}
+            @include breakpoint($type: 'all', $keep-original: true, $prefix: '-', $suffix: '') {
 
-	}
+                @supports (( -webkit-backdrop-filter: $amount / 2 ) or ( backdrop-filter: $amount / 2 )) {
+
+                    background-color: rgba($black, 0.2);
+                    backdrop-filter: blur($amount / 2);
+
+                }
+
+            }
+
+        }
+
+    }
 
 }
