--- a/source/__scss/utilities/_media.scss
+++ b/source/__scss/utilities/_media.scss
@@ -109,6 +109,15 @@ div.lazy {
 
 
 /* -------------------------------------------------- */
+/* IFRAME 
+/* -------------------------------------------------- */
+
+iframe {
+    border: 0;
+}
+
+
+/* -------------------------------------------------- */
 /* VIDEO 
 /* -------------------------------------------------- */
 
