--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html class="no-js" lang="en" prefix="og: http://ogp.me/ns#">
+<html class="no-js" lang="--language" prefix="og: http://ogp.me/ns#">
 <head>
 <title>--name | {{{ title }}}</title>
 <meta charset="utf-8">
@@ -101,6 +101,7 @@
 
 </head>
 
+
 	<body>
 
 
@@ -115,8 +116,8 @@
 
 		<div>
 			<img src="assets/error.gif" alt="Ooops, your JavaScript is disabled."/>
-			<span>JavaScript is disabled on your browser</span>.<br>
-			It is required for this site to deliver a pleasant viewing experience. Please enable JavaScript to continue using this website.
+			<h1>JavaScript is disabled on your browser</h1>
+			<p>It is required for this site to deliver a pleasant viewing experience. Please enable JavaScript to continue using this website.</p>
 		</div>
 
 	</noscript>
@@ -143,6 +144,8 @@
 
 	</main>
 	<!-- // MAIN -->
+
+
 
 
 
@@ -345,5 +348,6 @@
 
 
 	</body>
+
 
 </html>
