--- a/source/__scss/framework/_mixins.scss
+++ b/source/__scss/framework/_mixins.scss
@@ -29,12 +29,12 @@
 
 
 // Basic components
-@include foundation-badge;
+//@include foundation-badge;
 //@include foundation-breadcrumbs;
 //@include foundation-callout;
 //@include foundation-card;
-@include foundation-dropdown;
-@include foundation-pagination;
+//@include foundation-dropdown;
+//@include foundation-pagination;
 //@include foundation-tooltip;
 
 
@@ -48,17 +48,17 @@
 
 
 // Menu-based containers
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-accordion-menu;
-@include foundation-drilldown-menu;
-@include foundation-dropdown-menu;
+//@include foundation-menu;
+//@include foundation-menu-icon;
+//@include foundation-accordion-menu;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown-menu;
 
 
 // Layout components
-@include foundation-off-canvas;
+//@include foundation-off-canvas;
 //@include foundation-reveal;
-@include foundation-sticky;
+//@include foundation-sticky;
 //@include foundation-title-bar;
 @include foundation-top-bar;
 
